--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@ layout: default
     <div class="previews__container">
       <span>Welcome to</span>
       <h1>{{ site.title }}</h1>
+	  <div>
+		<img src="/assets/images/devoctomy_icon.png" />
+	  </div>
     </div>
   </div>
 
@@ -17,6 +20,7 @@ layout: default
       <ul class="tabs">
         <li class="tabs__item">Posts</li>
         <li class="tabs__item">Categories</li>
+		<li class="tabs__item">About</li>
       </ul>
     </header>
 
@@ -50,6 +54,8 @@ layout: default
     </div>
 
     {% include categories-tab.html %}
+	
+	{% include about-tab.html %}
 
   </div>
 
