Added contact page with mailchimp news signup form

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ layout: default
         <li class="tabs__item">Posts</li>
         <li class="tabs__item">Categories</li>
 		<li class="tabs__item">About</li>
+		<li class="tabs__item">Contact</li>
       </ul>
     </header>
 
@@ -57,6 +58,7 @@ layout: default
 	
 	{% include about-tab.html %}
 
+	{% include contact-tab.html %}
   </div>
 
 </section>
