Added support redirect page

--- a/error.html
+++ b/error.html
@@ -5,7 +5,7 @@ layout: default
 	  <h1>{{ site.title }}</h1>
 	  <span>On no, something went terribly wrong! :(</span>
 	  <p><a href="/">Click here to go back to the home page</a></p>
-	  <div>
+	  <div style="width:512px;margin: 0 auto">
 		<img src="/assets/images/devoctomy_icon.png" />
 	  </div>
   </div>
